force-app/main/default/objects/Decrease__c/Decrease__c.object-meta.xml
<CustomObject>
    <label>Decrease Sales Reason</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Decrease ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decrease</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>